# nrf_security_builder

./: CMakeLists.txt  buildall.sh  overlay-fshort-wchar.conf  overlay-soft-float.conf  overlay-softfp.conf  prj.conf
